# AIfred

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.in  requirements.txt
aifred/: main.py
aifred/chains/: action.py  general.py  memory.py  query.py  router.py
aifred/core/: chatbot.py  intents.py
aifred/prompts/: modified_entity_summarization.yaml  sys_aifred_query_format.yaml  sys_input_to_memory_categories.yaml  sys_input_to_memory_category.yaml  user_aifred_action_failed_format.yaml  user_aifred_action_successful_format.yaml  user_memory_synthesizer.yaml
chains/: action.py  action_chain.py  general.py  general_chain.py  memory.py  memory_categorizer_chain.py  query.py  query_chain.py  router.py  router_chain.py
core/: bot.py  chat.py  chatbot.py
libs/: bot.py  chat.py  router.py
libs/bot/: bot.py  intents.py
libs/chat/: chat.py
prompts/: aifred.yaml  aifred_personality.yaml  categorizer.yaml  memory.schema  sys_general_chain.yaml  sys_input_to_memory_categories.yaml  sys_query_action_categorizer.yaml
tools/: add_documents.py  compare_documents.py
